cameras page unit tests

--- a/src/app/pages/cameras/cameras.component.html
+++ b/src/app/pages/cameras/cameras.component.html
@@ -1,6 +1,8 @@
 <div class="cameras">
+  <!-- title -->
   <h2 class="cameras__title">Cameras</h2>
 
+  <!--  cameras  -->
   @if (camerasLoading()) {
     <app-cameras-loading />
   } @else if (camerasError()) {
